--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -10,9 +10,13 @@ Url1=http://127.0.0.1:4723/wd/hub
 GridURL=http://18.222.199.63:4444/wd/hub
 BuildUrl= C:\\Users\\malam\\IdeaProjects\\com.accu-time\\src\\test\\resources\\Build\\ATSMgmtDemo-3-17-21.apk
 Password=2019061
+#Password=1234
 atsManufacture=08051945
 #Password=12345
 #ApplicationName=atsmgmt_demo
 ApplicationName=testMode
 #ApplicationName=clockSetup
 #screenshot=C:\Users\malam\IdeaProjects\com.accu-time\target\screenshot
+#firScaPass=Capture : Passed
+failFinger=Verify : Failed
+scaFingMessage=Place the same finger on fingerprint scanner for verification.
