--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,15 +1,15 @@
 #Database Connection Properties
 DbUser=postgres
 DbPassword=1234
-DbName=mortgage_calculator
+#DbName=mortgage_calculator
 #Application URL
 #Url=https://www.#########.org/
 Url=http://127.0.0.1:4723/wd/hub
-Url1=http://127.0.0.1:4723/wd/hub
+#Url1=http://127.0.0.1:4723/wd/hub
 #Selenium Grid URL
 GridURL=http://18.222.199.63:4444/wd/hub
 BuildUrl= C:\\Users\\malam\\IdeaProjects\\com.accu-time\\src\\test\\resources\\Build\\ATSMgmtDemo-3-17-21.apk
-//BuildUrl= C:\\Users\\malam\\Desktop\\Build\\MgmtDemo_Stride.apk
+#BuildUrl= C:\\Users\\malam\\Desktop\\Build\\MgmtDemo_Stride.apk
 
 Password=2019061
 #Password=1234
